# wordlebot

./: .gitignore  Cargo.toml  README.md
src/: README.md  app.rs  app_test.rs  game.rs  handlers.rs  main.rs  wordle.rs  wordle_test.rs
