[package]
name = "wordlebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
log = "0.4.19"
mobot = "0"
mobot-derive = "0"
rand = "0.8.5"
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
